@@ -1,6 +1,7 @@
 if BUILD_DOCS
   DOC_DIR = doc
 endif
-SUBDIRS = src $(DOC_DIR)
+
+SUBDIRS = src tests $(DOC_DIR)
 
 bin_SCRIPTS=glimmer-config
