@@ -1,0 +1,45 @@
+# configuration for the EISMINT-2 test-case
+
+[EISMINT-2]
+
+[grid]
+# grid sizes
+ewn = 71
+nsn = 61
+upn = 11
+dew = 25000
+dns = 25000
+
+[options]
+temperature = 1
+flow_law = 0
+isostasy = 0
+marine_margin = 2
+stress_calc = 2
+evolution = 0
+basal_water = 0
+slip_coeff = 2
+sliding_law = 0
+vertical_integration = 1
+
+[time]
+tend = 10000.
+dt = 5.
+ntem = 1.
+nvel = 1.
+niso = 1.
+
+[parameters]
+flow_factor = 1
+geothermal = -42e-3
+basal_tract_const = 1.e-3
+
+[CF default]
+title: basic test
+comment: using linear solver
+
+[CF output]
+name: e2.lin.nc
+frequency: 1000
+variables: thk bmlt temp uvel vvel wvel wgrd bwat
+
